# dlux

./: .gitignore  .gitreview  Gruntfile.js  HACKING.rst  INFO.yaml  README.md  README.rst  bower.json  build.config.js  env.config.json  groups  manage.py  optimize.js  package.json  pom.xml  project.config  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini  vieux.sublime-project
archetype/: pom.xml
bootstrapper/: README.md  pom.xml
bundles/: pom.xml
connection_manager/: pom.xml
container/: pom.xml
core/: .gitignore  move_resource.sh  pom.xml
distribution-dlux/: pom.xml
dlux/: api.py  exceptions.py  settings.py  urls.py  views.py
dlux-web/: .bowerrc  .gitignore  Gruntfile.js  bower.json  build.config.js  optimize.js  package.json  pom.xml
dlux_karaf/: .project  pom.xml
features/: pom.xml
flow/: pom.xml
general/: pom.xml
home/: pom.xml
karma/: karma-unit.tpl.js
layout/: move_resource.sh  pom.xml
loader/: pom.xml
modules/: pom.xml
navigation/: move_resource.sh  pom.xml
network/: pom.xml
node/: move_resource.sh  pom.xml
osgi-bundles/: pom.xml
src/: README.md  config.js  index.html  login.html  main.js  test-main.js
static-dlux/: pom.xml
template/: blank.html  buttons.html  calendar.html  changelog  credits.txt  dropzone.html  elements.html  empty.html  error-404.html  error-500.html  faq.html  form-elements.html  form-wizard.html  gallery.html  grid.html  inbox.html  index.html  invoice.html  jqgrid.html  jquery-ui.html  login.html  nestable-list.html  pricing.html  profile.html  tables.html  timeline.html  (+3 more)
(+1473 files in other folders)
