[metadata]
name = dlux
version = 2013.2
summary = DLUX Management Dashboard
description-file =
    README.rst
author = OpenDaylight
author-email = dlux-discuss@lists.opendaylight.org
home-page = http://www.openstack.org/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Topic :: Internet :: WWW/HTTP

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    dlux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
verbosity=2
detailed-errors=1
